--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -75,7 +75,7 @@ html[data-theme="dark"] .logo-dark {
   align-items: center;
   background: none;
   border: none;
-  padding: 8px 0;
+  padding: 10px 0;
   color: var(--neutral-600);
   cursor: pointer;
   transition: color 0.2s;
@@ -324,6 +324,11 @@ kbd.DocSearch-Button-Key {
   color: var(--neutral-500) !important
 }
 
+.DocSearch-Button-Placeholder{
+  font-size:0.8rem;
+  color: var(--neutral-500) !important
+
+}
 
 
 
@@ -364,11 +369,9 @@ kbd.DocSearch-Button-Key {
   justify-content: center;
   height: 32px;
   padding: 0 8px;
-  border-radius: 6px;
+  border-radius: 9px;
   background-color: var(--neutral-900);
   color: var(--neutral-50);
-  font-size: 0.8rem;
-  font-weight: 500;
   transition: background-color 0.2s, border-color 0.2s;
   text-decoration: none;
   white-space: nowrap; /* Prevent wrapping */
@@ -383,7 +386,7 @@ kbd.DocSearch-Button-Key {
   width: var(--toggle-width); /* Set the width of your "box" */
   height: var(--toggle-height); /* Set the height of your "box" */
   border-radius: var(--toggle-border-radius); /* Rounded corners */
-  background-color: var(--neutral-200); /* Toggle background color */
+  background-color: var(--neutral-200)!important; /* Toggle background color */
   padding: var(--toggle-padding);
   cursor: pointer;
   transition: background-color 0.3s ease;
