--- a/src/pages/additionalResourec.module.css
+++ b/src/pages/additionalResourec.module.css
@@ -53,7 +53,7 @@ html[data-theme="dark"] .resourceCard:hover {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #fff;
+  background-color: var(--background-01)!important;
   border: 2px solid var(--ifm-color-emphasis-200); /* border border-[--ifm-color-emphasis-200] */
   width: 40px;
   height: 40px;
@@ -61,11 +61,11 @@ html[data-theme="dark"] .resourceCard:hover {
   margin-bottom: 1rem;
 }
 
-html[data-theme="dark"] .iconBox {
+/* html[data-theme="dark"] .iconBox {
   background-color: rgba(255, 255, 255, 0.1) !important;
   background-color: var(--docs-color-text);
-  border: 2px solid var(--ifm-color-emphasis-200); /* border border-[--ifm-color-emphasis-200] */
-}
+  border: 2px solid var(--ifm-color-emphasis-200); 
+} */
 
 .icon {
   width: 20px;
